<resources>
    <string name="app_name">OnTime</string>
    <string name="login_button">Log In</string>
    <string name="craeateacc_but">Create account</string>
    <string name="Student_but">Student</string>
    <string name="faculty_but">Faculty</string>
    <string name="title_activity_teacher_login">Sign in</string>
    <string name="name">Name</string>
    <string name="button">Button</string>
    <string name="batch">Batch</string>
    <string name="enrollmentno">Enrollment Number</string>
    <string name="password">Password</string>
    <string name="email">Email ID</string>
    <string name="facultyid">Faculty ID</string>
    <string name="facultyname">Name</string>
    <string name="courseid">Course ID</string>
    <string name="register">Register</string>
    <string name="todo">TODO</string>
    <string name="title_activity_studentmainpage">Studentmainpage</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="myappointments">Status</string>
    <string name="check">Check Requests</string>
    <string name="logout">LogOut</string>
    <string name="request">Request</string>
    <string name="title_activity_student_main_page1">StudentMainPage1</string>
    <string name="Selectfaculty">Select Faculty</string>
    <string-array name="Facultyname">
        <item>Select Faculty</item>
        <item>Kumar Nitesh</item>
        <item>Manoj Kumar</item>
        <item>Prosenjith Gupta</item>
        <item>RamNarayan Yadav</item>
    </string-array>
    <string name="appointmentdate">Appointment Date</string>
    <string name="set">Set Date</string>
    <string name="desc">Description</string>

    <string name="request1">Request Appointment</string>
    <string name="back">Back</string>
    <string name="view">View</string>
    <string name="time">Time</string>

</resources>
